mcs/mbas/Test/errors/VariablesC14.vb
'Author:
'   V. Sudharsan (vsudharsan@novell.com)
'
' (C) 2005 Novell, Inc.

REM LineNo: 14
REM ExpectedError: BC30201
REM ErrorMessage: Expression expected.

Imports System

Module Test
    Public Sub Main()
		dim i as integer = 
    End Sub
End Module
